Top level endpoint mapping for eventgen per SOLN-1698
Copied from Perforce
 Change: 101108

--- a/package/default/restmap.conf
+++ b/package/default/restmap.conf
@@ -9,3 +9,7 @@
 handlertype = python
 handlerfile = eventgen_python_handler.py
 handleractions = list
+
+[admin:eventgen]
+match=/configs
+members=eventgen
