Added eai:userName and eai:appName per SOLN-1703 Also renamed to eventgen_rest_handler.py
Copied from Perforce
 Change: 101142

--- a/package/default/restmap.conf
+++ b/package/default/restmap.conf
@@ -7,7 +7,7 @@
 
 [admin_external:eventgen]
 handlertype = python
-handlerfile = eventgen_python_handler.py
+handlerfile = eventgen_rest_handler.py
 handleractions = list
 
 [admin:eventgen]
