Added setup_logger to eventgen_rest_handler and additional logging to eventgen per SOLN-1668
Copied from Perforce
 Change: 101470

--- a/package/default/props.conf
+++ b/package/default/props.conf
@@ -1,4 +1,9 @@
 
+## Eventgen Rest Handler
+[source::...eventgen_rest_handler.log]
+sourcetype = eventgen_rest_handler
+
+## Eventgen
 [source::...eventgen.log]
 sourcetype = eventgen
 
