Fixed many many bugs, added config file flattening

--- a/local/eventgen-standalone.conf
+++ b/local/eventgen-standalone.conf
@@ -1,9 +1,9 @@
 ##### Sample Business Event ######
 [sample.businessevent]
-interval = 1
-earliest = now
+interval = 3
+earliest = -3s
 latest = now
-count = 10
+count = 8
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 hourOfDayRate = { "0": 0.30, "1": 0.10, "2": 0.05, "3": 0.10, "4": 0.15, "5": 0.25, "6": 0.35, "7": 0.50, "8": 0.60, "9": 0.65, "10": 0.70, "11": 0.75, "12": 0.77, "13": 0.80, "14": 0.82, "15": 0.85, "16": 0.87, "17": 0.90, "18": 0.95, "19": 1.0, "20": 0.85, "21": 0.70, "22": 0.60, "23": 0.45 }
 dayOfWeekRate = { "0": 0.97, "1": 0.95, "2": 0.90, "3": 0.97, "4": 1.0, "5": 0.99, "6": 0.55 }
@@ -14,16 +14,16 @@ randomizeEvents = true
 # spoolDir = $SPLUNK_HOME/var/spool/splunk
 # spoolFile = <SAMPLE>
 
-# outputMode = file
-# file = /tmp/samplesbusinessevent.log
+outputMode = file
+fileName = /tmp/samplesbusinessevent.log
 
-outputMode = splunkstream
-splunkHost = localhost
-splunkUser = admin
-splunkPass = rUstY3
-index=main
-source=eventgen
-sourcetype=business_event
+# outputMode = splunkstream
+# splunkHost = localhost
+# splunkUser = admin
+# splunkPass = rUstY3
+# index=main
+# source=eventgen
+# sourcetype=business_event
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2},\d{3}
 token.0.replacementType = timestamp
@@ -43,7 +43,7 @@ token.3.replacement = hex(8)
 
 token.4.token = orderType=(\w+)
 token.4.replacementType = file
-token.4.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/orderType.sample
+token.4.replacement = /Users/csharp/local/projects/oidemo/samples/orderType.sample
 
 token.5.token = ESB~([0-9a-fA-F]{16})
 token.5.replacementType = random
@@ -75,63 +75,63 @@ token.11.replacement = integer[10000000:99999999]
 
 token.12.token = userName=(\w+)
 token.12.replacementType = file
-token.12.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/userName.sample
+token.12.replacement = /Users/csharp/local/projects/oidemo/samples/userName.sample
 
 token.13.token = mdn=(\d{10})
 token.13.replacementType = file
-token.13.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/mdn.sample
+token.13.replacement = /Users/csharp/local/projects/oidemo/samples/mdn.sample
 
 token.14.token = marketCity="(\w+)"
 token.14.replacementType = mvfile
-token.14.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/markets.sample:2
+token.14.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:2
 
 token.15.token = marketState=(\w+)
 token.15.replacementType = mvfile
-token.15.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/markets.sample:3
+token.15.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:3
 
 token.16.token = marketZip=(\d+)
 token.16.replacementType = mvfile
-token.16.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/markets.sample:1
+token.16.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:1
 
 token.17.token = autoBillPayment=(\w)
 token.17.replacementType = file
-token.17.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/autoBillPayment.sample
+token.17.replacement = /Users/csharp/local/projects/oidemo/samples/autoBillPayment.sample
 
 token.18.token = phoneCode=(\w+)
 token.18.replacementType = mvfile
-token.18.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/phones.sample:1
+token.18.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:1
 
 token.19.token = phoneType=(\w+)
 token.19.replacementType = mvfile
-token.19.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/phones.sample:2
+token.19.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:2
 
 token.20.token = phoneName="([^"]+)"
 token.20.replacementType = mvfile
-token.20.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/phones.sample:3
+token.20.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:3
 
 token.21.token = planCode=(\w+)
 token.21.replacementType = mvfile
-token.21.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:1
+token.21.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:1
 
 token.22.token = accountType=(\w+)
 token.22.replacementType = mvfile
-token.22.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:2
+token.22.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:2
 
 token.23.token = planType=(\w+)
 token.23.replacementType = mvfile
-token.23.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:2
+token.23.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:2
 
 token.24.token = planPrice=(\w+)
 token.24.replacementType = mvfile
-token.24.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:3
+token.24.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:3
 
 token.25.token = planName="([^"]+)"
 token.25.replacementType = mvfile
-token.25.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:4
+token.25.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:4
 
 token.26.token = planDescription="([^"]+)"
 token.26.replacementType = mvfile
-token.26.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:5
+token.26.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:5
 
 token.27.token = billingCycle=(\d+)
 token.27.replacementType = random
@@ -143,43 +143,43 @@ token.28.replacement = hex(14)
 
 token.29.token = networkProviderName=(\w+)
 token.29.replacementType = mvfile
-token.29.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/markets.sample:7
+token.29.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:7
 
 token.18.token = phoneCode=(\w+)
 token.18.replacementType = mvfile
-token.18.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/phones.sample:1
+token.18.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:1
 
 token.19.token = phoneType=(\w+)
 token.19.replacementType = mvfile
-token.19.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/phones.sample:2
+token.19.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:2
 
 token.20.token = phoneName="([^"]+)"
 token.20.replacementType = mvfile
-token.20.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/phones.sample:3
+token.20.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:3
 
 token.21.token = planCode=(\w+)
 token.21.replacementType = mvfile
-token.21.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:1
+token.21.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:1
 
 token.22.token = accountType=(\w+)
 token.22.replacementType = mvfile
-token.22.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:2
+token.22.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:2
 
 token.23.token = planType=(\w+)
 token.23.replacementType = mvfile
-token.23.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:2
+token.23.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:2
 
 token.24.token = planPrice=(\w+)
 token.24.replacementType = mvfile
-token.24.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:3
+token.24.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:3
 
 token.25.token = planName="([^"]+)"
 token.25.replacementType = mvfile
-token.25.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:4
+token.25.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:4
 
 token.26.token = planDescription="([^"]+)"
 token.26.replacementType = mvfile
-token.26.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/plans.sample:5
+token.26.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:5
 
 token.27.token = billingCycle=(\d+)
 token.27.replacementType = random
@@ -191,4 +191,4 @@ token.28.replacement = hex(14)
 
 token.29.token = networkProviderName=(\w+)
 token.29.replacementType = mvfile
-token.29.replacement = $SPLUNK_HOME/etc/apps/oidemo/samples/markets.sample:7
+token.29.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:7
