--- a/local/eventgen-standalone.conf
+++ b/local/eventgen-standalone.conf
@@ -3,7 +3,7 @@
 interval = 3
 earliest = -3s
 latest = now
-count = 8
+count = 1000000
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 hourOfDayRate = { "0": 0.30, "1": 0.10, "2": 0.05, "3": 0.10, "4": 0.15, "5": 0.25, "6": 0.35, "7": 0.50, "8": 0.60, "9": 0.65, "10": 0.70, "11": 0.75, "12": 0.77, "13": 0.80, "14": 0.82, "15": 0.85, "16": 0.87, "17": 0.90, "18": 0.95, "19": 1.0, "20": 0.85, "21": 0.70, "22": 0.60, "23": 0.45 }
 dayOfWeekRate = { "0": 0.97, "1": 0.95, "2": 0.90, "3": 0.97, "4": 1.0, "5": 0.99, "6": 0.55 }
@@ -15,23 +15,25 @@ randomizeEvents = true
 # spoolFile = <SAMPLE>
 
 outputMode = file
-fileName = /tmp/samplesbusinessevent.log
+fileName = /tmp/lotsofevents.log
 
 # outputMode = splunkstream
-# splunkHost = localhost
-# splunkUser = admin
-# splunkPass = rUstY3
 # index=main
 # source=eventgen
 # sourcetype=business_event
+
+# Host/User/pass only necessary if running outside of splunk!
+# splunkHost = localhost
+# splunkUser = admin
+# splunkPass = changeme
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2},\d{3}
 token.0.replacementType = timestamp
 token.0.replacement = %Y-%m-%d %H:%M:%S
 
 token.1.token = timestamp=(\d+)
-token.1.replacementType = timestamp
-token.1.replacement = %s
+token.1.replacementType = random
+token.1.replacement = integer[1337000000:1339000000]
 
 token.2.token = JMSMessageID=ID:ESP-PD.([0-9A-F]{13}):
 token.2.replacementType = random
