--- a/local/eventgen-standalone.conf.sample
+++ b/local/eventgen-standalone.conf.sample
@@ -51,7 +51,7 @@ token.3.replacement = hex(8)
 
 token.4.token = orderType=(\w+)
 token.4.replacementType = file
-token.4.replacement = /Users/csharp/local/projects/oidemo/samples/orderType.sample
+token.4.replacement = ../samples/orderType.sample
 
 token.5.token = ESB~([0-9a-fA-F]{16})
 token.5.replacementType = random
@@ -83,63 +83,63 @@ token.11.replacement = integer[10000000:99999999]
 
 token.12.token = userName=(\w+)
 token.12.replacementType = file
-token.12.replacement = /Users/csharp/local/projects/oidemo/samples/userName.sample
+token.12.replacement = ../samples/userName.sample
 
 token.13.token = mdn=(\d{10})
 token.13.replacementType = file
-token.13.replacement = /Users/csharp/local/projects/oidemo/samples/mdn.sample
+token.13.replacement = ../samples/mdn.sample
 
 token.14.token = marketCity="(\w+)"
 token.14.replacementType = mvfile
-token.14.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:2
+token.14.replacement = ../samples/markets.sample:2
 
 token.15.token = marketState=(\w+)
 token.15.replacementType = mvfile
-token.15.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:3
+token.15.replacement = ../samples/markets.sample:3
 
 token.16.token = marketZip=(\d+)
 token.16.replacementType = mvfile
-token.16.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:1
+token.16.replacement = ../samples/markets.sample:1
 
 token.17.token = autoBillPayment=(\w)
 token.17.replacementType = file
-token.17.replacement = /Users/csharp/local/projects/oidemo/samples/autoBillPayment.sample
+token.17.replacement = ../samples/autoBillPayment.sample
 
 token.18.token = phoneCode=(\w+)
 token.18.replacementType = mvfile
-token.18.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:1
+token.18.replacement = ../samples/phones.sample:1
 
 token.19.token = phoneType=(\w+)
 token.19.replacementType = mvfile
-token.19.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:2
+token.19.replacement = ../samples/phones.sample:2
 
 token.20.token = phoneName="([^"]+)"
 token.20.replacementType = mvfile
-token.20.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:3
+token.20.replacement = ../samples/phones.sample:3
 
 token.21.token = planCode=(\w+)
 token.21.replacementType = mvfile
-token.21.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:1
+token.21.replacement = ../samples/plans.sample:1
 
 token.22.token = accountType=(\w+)
 token.22.replacementType = mvfile
-token.22.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:2
+token.22.replacement = ../samples/plans.sample:2
 
 token.23.token = planType=(\w+)
 token.23.replacementType = mvfile
-token.23.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:2
+token.23.replacement = ../samples/plans.sample:2
 
 token.24.token = planPrice=(\w+)
 token.24.replacementType = mvfile
-token.24.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:3
+token.24.replacement = ../samples/plans.sample:3
 
 token.25.token = planName="([^"]+)"
 token.25.replacementType = mvfile
-token.25.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:4
+token.25.replacement = ../samples/plans.sample:4
 
 token.26.token = planDescription="([^"]+)"
 token.26.replacementType = mvfile
-token.26.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:5
+token.26.replacement = ../samples/plans.sample:5
 
 token.27.token = billingCycle=(\d+)
 token.27.replacementType = random
@@ -151,43 +151,43 @@ token.28.replacement = hex(14)
 
 token.29.token = networkProviderName=(\w+)
 token.29.replacementType = mvfile
-token.29.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:7
+token.29.replacement = ../samples/markets.sample:7
 
 token.18.token = phoneCode=(\w+)
 token.18.replacementType = mvfile
-token.18.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:1
+token.18.replacement = ../samples/phones.sample:1
 
 token.19.token = phoneType=(\w+)
 token.19.replacementType = mvfile
-token.19.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:2
+token.19.replacement = ../samples/phones.sample:2
 
 token.20.token = phoneName="([^"]+)"
 token.20.replacementType = mvfile
-token.20.replacement = /Users/csharp/local/projects/oidemo/samples/phones.sample:3
+token.20.replacement = ../samples/phones.sample:3
 
 token.21.token = planCode=(\w+)
 token.21.replacementType = mvfile
-token.21.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:1
+token.21.replacement = ../samples/plans.sample:1
 
 token.22.token = accountType=(\w+)
 token.22.replacementType = mvfile
-token.22.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:2
+token.22.replacement = ../samples/plans.sample:2
 
 token.23.token = planType=(\w+)
 token.23.replacementType = mvfile
-token.23.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:2
+token.23.replacement = ../samples/plans.sample:2
 
 token.24.token = planPrice=(\w+)
 token.24.replacementType = mvfile
-token.24.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:3
+token.24.replacement = ../samples/plans.sample:3
 
 token.25.token = planName="([^"]+)"
 token.25.replacementType = mvfile
-token.25.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:4
+token.25.replacement = ../samples/plans.sample:4
 
 token.26.token = planDescription="([^"]+)"
 token.26.replacementType = mvfile
-token.26.replacement = /Users/csharp/local/projects/oidemo/samples/plans.sample:5
+token.26.replacement = ../samples/plans.sample:5
 
 token.27.token = billingCycle=(\d+)
 token.27.replacementType = random
@@ -199,4 +199,4 @@ token.28.replacement = hex(14)
 
 token.29.token = networkProviderName=(\w+)
 token.29.replacementType = mvfile
-token.29.replacement = /Users/csharp/local/projects/oidemo/samples/markets.sample:7
+token.29.replacement = ../samples/markets.sample:7
