Added support for delaying the start of a sample and added support for float random

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -16,6 +16,7 @@ spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
 interval = 60
+delay = 0
 ## 0 means all lines in sample
 count = 0
 ## earliest/latest = now means timestamp replacements default to current time
