Added support for CSV file samples which will override index, host, source and sourcetype

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -15,6 +15,7 @@ disabled = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
+sampletype = raw
 interval = 60
 delay = 0
 ## 0 means all lines in sample
@@ -34,3 +35,4 @@ splunkMethod = https
 index = main
 source = eventgen
 sourcetype = eventgen
+host = 127.0.0.1
