Found another regression defect introduced with transaction replay on 5/28.  I think I've added a condition which will satisfy both, but I'll have to keep an eye on the OIDemo test version to see if that comes back.
Probably should be filing Jiras for these.

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -12,7 +12,8 @@
 
 [global]
 disabled = false
-spoolDir = $SPLUNK_HOME/var/spool/splunk
+#spoolDir = $SPLUNK_HOME/var/spool/splunk
+spoolDir = /tmp/eventgen
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
 sampletype = raw
