Whoops, accidentally made production changes to eventgen.conf in the last fix.

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -12,8 +12,7 @@
 
 [global]
 disabled = false
-#spoolDir = $SPLUNK_HOME/var/spool/splunk
-spoolDir = /tmp/eventgen
+spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
 sampletype = raw
