--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -15,6 +15,7 @@ disabled = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
+mode = sample
 sampletype = raw
 interval = 60
 delay = 0
