Fixed bug with replay mode and getting the proper index, host, source, sourcetype set on a per event basis.  Also fixed bug with logging

--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -5,7 +5,7 @@
 # into ../local and edit there.
 #
 
-[script://$SPLUNK_HOME/etc/apps/SA-Eventgen/bin/eventgen.py]
+[script://./bin/eventgen.py]
 disabled = 1
 interval = 300
 passAuth = splunk-system-user
