Added a number of features, see README.me for a changelog in v1.1

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -12,6 +12,7 @@
 
 [global]
 disabled = false
+debug = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
@@ -19,6 +20,7 @@ mode = sample
 sampletype = raw
 interval = 60
 delay = 0
+timeMultiple = 1
 ## 0 means all lines in sample
 count = 0
 ## earliest/latest = now means timestamp replacements default to current time
