--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -11,3 +11,10 @@ interval = 300
 passAuth = splunk-system-user
 sourcetype = eventgen
 index = _internal
+
+[script://.\bin\eventgen.bat]
+disabled = false
+interval = 300
+passAuth = splunk-system-user
+sourcetype = eventgen
+index = _internal
