Many many performance improvements

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -12,7 +12,7 @@
 
 [global]
 disabled = false
-debug = true
+debug = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
