Working implementation of modular inputs

--- a/default/inputs.conf
+++ b/default/inputs.conf
@@ -13,8 +13,11 @@ sourcetype = eventgen
 index = _internal
 
 [script://.\bin\eventgen.bat]
-disabled = false
+disabled = 1
 interval = 300
 passAuth = splunk-system-user
 sourcetype = eventgen
 index = _internal
+
+[eventgen_modinput://main]
+disabled = false
