--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -40,3 +40,6 @@ source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
 outputWorkers = 1
+generator = default
+rater = config
+generatorWorkers = 1
