--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -12,7 +12,7 @@
 
 [global]
 disabled = false
-debug = false
+debug = true
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
@@ -39,3 +39,4 @@ index = main
 source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
+timeField = _raw
