Lots of perf testing.  Configurable threading/multiprocess.  Start on zeromq.

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -44,3 +44,8 @@ generator = default
 rater = config
 generatorWorkers = 1
 timeField = _raw
+threading = thread
+profiler = false
+queueing = python
+generatorQueueUrl = tcp://127.0.0.1:5557
+outputQueueUrl = tcp://127.0.0.1:5558
