Abandoning Zeromq, need to pull out of the codebase... added support for billiard.

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -39,12 +39,12 @@ index = main
 source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
-outputWorkers = 1
+outputWorkers = 2
 generator = default
 rater = config
-generatorWorkers = 1
+generatorWorkers = 2
 timeField = _raw
-threading = thread
+threading = process
 profiler = false
 queueing = python
 generatorQueueUrl = tcp://127.0.0.1:5557
