Functionally working.  Fixed a problem with the weblog generator causing it to misreport 5x the number of events.

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -39,13 +39,13 @@ index = main
 source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
-outputWorkers = 2
+outputWorkers = 1
 generator = default
 rater = config
-generatorWorkers = 2
+generatorWorkers = 1
 timeField = _raw
-threading = process
-profiler = false
+threading = thread
+profiler = true
 queueing = python
 generatorQueueUrl = tcp://127.0.0.1:5557
 outputQueueUrl = tcp://127.0.0.1:5558
