Functionally working.  Fixed a problem with the weblog generator causing it to misreport 5x the number of events.

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -46,6 +46,6 @@ generatorWorkers = 1
 timeField = _raw
 threading = thread
 profiler = true
-queueing = python
+queueing = zeromq
 generatorQueueUrl = tcp://127.0.0.1:5557
 outputQueueUrl = tcp://127.0.0.1:5558
