--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -39,13 +39,13 @@ index = main
 source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
-outputWorkers = 4
+outputWorkers = 1
 generator = default
 rater = config
 generatorWorkers = 1
 timeField = _raw
-threading = process
-profiler = true
-queueing = zeromq
+threading = thread
+profiler = false
+queueing = python
 generatorQueueUrl = tcp://127.0.0.1:5557
 outputQueueUrl = tcp://127.0.0.1:5558
