--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -45,7 +45,7 @@ rater = config
 generatorWorkers = 1
 timeField = _raw
 threading = thread
-profiler = false
 queueing = python
-generatorQueueUrl = tcp://127.0.0.1:5557
-outputQueueUrl = tcp://127.0.0.1:5558
+profiler = false
+zmqBaseUrl = tcp://127.0.0.1
+zmqBasePort = 5557
