Added tuneable for queueing in max queue size and max intervals.

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -13,6 +13,7 @@
 [global]
 disabled = false
 debug = false
+verbose = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
@@ -49,3 +50,5 @@ queueing = python
 profiler = false
 zmqBaseUrl = tcp://127.0.0.1
 zmqBasePort = 5557
+maxIntervalsBeforeFlush = 3
+maxQueueLength = 0
