--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -13,7 +13,7 @@
 [global]
 disabled = false
 debug = false
-verbose = false
+verbose = true
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
