Changing from JSON to Pickle for zeromq

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -13,7 +13,7 @@
 [global]
 disabled = false
 debug = false
-verbose = true
+verbose = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
@@ -40,14 +40,14 @@ index = main
 source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
-outputWorkers = 1
+outputWorkers = 2
 generator = default
 rater = config
-generatorWorkers = 1
+generatorWorkers = 22
 timeField = _raw
-threading = thread
-queueing = python
-profiler = false
+threading = process
+queueing = zeromq
+profiler = true
 zmqBaseUrl = tcp://127.0.0.1
 zmqBasePort = 5557
 maxIntervalsBeforeFlush = 3
