--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -40,13 +40,13 @@ index = main
 source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
-outputWorkers = 2
+outputWorkers = 1
 generator = default
 rater = config
-generatorWorkers = 22
+generatorWorkers = 1
 timeField = _raw
-threading = process
-queueing = zeromq
+threading = thread
+queueing = python
 profiler = true
 zmqBaseUrl = tcp://127.0.0.1
 zmqBasePort = 5557
