--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -40,13 +40,13 @@ index = main
 source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
-outputWorkers = 1
+outputWorkers = 2
 generator = default
 rater = config
-generatorWorkers = 1
+generatorWorkers = 2
 timeField = _raw
-threading = thread
-queueing = python
+threading = process
+queueing = zeromq
 profiler = true
 zmqBaseUrl = tcp://127.0.0.1
 zmqBasePort = 5557
