--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -40,14 +40,14 @@ index = main
 source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
-outputWorkers = 2
+outputWorkers = 1
 generator = default
 rater = config
 generatorWorkers = 2
 timeField = _raw
 threading = process
 queueing = zeromq
-profiler = true
+profiler = false
 zmqBaseUrl = tcp://127.0.0.1
 zmqBasePort = 5557
 maxIntervalsBeforeFlush = 3
