Numerous concurrency bugs.  Fixed modular input output.

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -12,7 +12,7 @@
 
 [global]
 disabled = false
-debug = false
+debug = true
 verbose = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
@@ -43,10 +43,10 @@ host = 127.0.0.1
 outputWorkers = 1
 generator = default
 rater = config
-generatorWorkers = 2
+generatorWorkers = 1
 timeField = _raw
-threading = process
-queueing = zeromq
+threading = thread
+queueing = python
 profiler = false
 zmqBaseUrl = tcp://127.0.0.1
 zmqBasePort = 5557
