Fixing a couple of bugs with replay

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -12,7 +12,7 @@
 
 [global]
 disabled = false
-debug = true
+debug = false
 verbose = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
@@ -40,7 +40,7 @@ index = main
 source = eventgen
 sourcetype = eventgen
 host = 127.0.0.1
-outputWorkers = 1
+outputWorkers = 5
 generator = default
 rater = config
 generatorWorkers = 1
