Fixing concurrency bug

--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -45,8 +45,8 @@ rater = config
 generatorWorkers = 1
 outputWorkers = 1
 timeField = _raw
-threading = process
-queueing = zeromq
+threading = thread
+queueing = python
 profiler = false
 zmqBaseUrl = tcp://127.0.0.1
 zmqBasePort = 5557
