--- a/default/props.conf
+++ b/default/props.conf
@@ -10,3 +10,5 @@ sourcetype = eventgen
 [eventgen]
 REPORT-sample-app_for_eventgen = sample-app_for_eventgen
 REPORT-completion_time_for_eventgen = completion_time_for_eventgen
+EXTRACT-level = \S+\s\S+\s(?<level>[^ ]+)
+EXTRACT-message = \S+\s\S+\s\S+\s[^:]+:(?<message>.+)
