--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -12,8 +12,8 @@
 
 [global]
 disabled = false
-debug = true
-verbose = true
+debug = false
+verbose = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
