Adding new perf view

--- a/default/app.conf
+++ b/default/app.conf
@@ -10,11 +10,11 @@
 [install]
 is_configured = false
 state = enabled
-build = 117632
 
 [launcher]
 author = Splunk
-version = 2.0.3
+version = 4.0.0
+description = Eventgen
 
 [ui]
 is_visible = true
