--- a/default/props.conf
+++ b/default/props.conf
@@ -7,6 +7,11 @@ sourcetype = eventgen_rest_handler
 [source::...eventgen.log]
 sourcetype = eventgen
 
+[source::...eventgen_metrics.log]
+sourcetype = eventgen_metrics
+kv_mode = json
+indexed_extractions = json
+
 [eventgen]
 REPORT-sample-app_for_eventgen = sample-app_for_eventgen
 REPORT-completion_time_for_eventgen = completion_time_for_eventgen
