SA-Eventgen2.spl changed back to SA-Eventgen.spl
Copied from Perforce
 Change: 212215

--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 version.major=4
 version.minor=0
 version.revision=0
-appname=SA-Eventgen2
+appname=SA-Eventgen
 build.type=spl
 perforce.path=//splunk/solutions/SA-Eventgen/mainline2/...
