--- a/build.xml
+++ b/build.xml
@@ -4,13 +4,13 @@
      ant build file for event_gen
      Splunk, Inc.           			         -->
 
-<project name="event_gen2" basedir="." default="rebuild">
+<project name="event_gen" basedir="." default="rebuild">
 
 	<!-- Get the environment -->
 	<property environment="env" />
 
 	<!-- Set the name of the build (is typically the name of the app) -->
-	<property name="build.name" value="event_gen2" />
+	<property name="build.name" value="event_gen" />
 
 	<!-- load local build properties -->
 	<property file="${basedir}/local.build.properties" />
