fixed the version of SA-Eventgen2 to be automatically applied
Copied from Perforce
 Change: 212253

--- a/package/default/app.conf
+++ b/package/default/app.conf
@@ -10,11 +10,11 @@
 [install]
 is_configured = false
 state = enabled
-build = 117632
+build = @version.build@
 
 [launcher]
 author = Splunk
-version = 2.0.3
+version=@version.major@.@version.minor@.@version.revision@
 
 [ui]
-is_visible = false
+is_visible = @isvisible@
