--- a/default/eventgen.conf
+++ b/default/eventgen.conf
@@ -42,7 +42,7 @@ sourcetype = eventgen
 host = 127.0.0.1
 generator = default
 rater = config
-generatorWorkers = 1
+generatorWorkers = 4
 outputWorkers = 1
 timeField = _raw
 threading = thread
@@ -52,3 +52,4 @@ zmqBaseUrl = tcp://127.0.0.1
 zmqBasePort = 5557
 maxIntervalsBeforeFlush = 3
 maxQueueLength = 0
+useOutputQueue = true
