--- a/package/default/eventgen.conf
+++ b/package/default/eventgen.conf
@@ -12,8 +12,8 @@
 
 [global]
 disabled = false
-debug = true
-verbose = true
+debug = false
+verbose = false
 spoolDir = $SPLUNK_HOME/var/spool/splunk
 spoolFile = <SAMPLE>
 breaker = [^\r\n\s]+
@@ -52,3 +52,4 @@ zmqBaseUrl = tcp://127.0.0.1
 zmqBasePort = 5557
 maxIntervalsBeforeFlush = 3
 maxQueueLength = 0
+useOutputQueue = true
