--- a/package/default/app.conf
+++ b/package/default/app.conf
@@ -14,7 +14,7 @@ build = @version.build@
 
 [launcher]
 author = Splunk
-version=@version.major@.@version.minor@.@version.revision@
+version=@version.major@.@version.minor@ @version.revision@
 
 [ui]
 is_visible = false
