--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 .DS_Store
 build
 .build
+.project
+.pydevproject
 eventgen.spl
 package.json
 node_modules
+cached_build_info.properties
+local.build.properties
+stage/
