--- a/default/props.conf
+++ b/default/props.conf
@@ -9,8 +9,7 @@ sourcetype = eventgen
 
 [source::...eventgen_metrics.log]
 sourcetype = eventgen_metrics
-kv_mode = json
-indexed_extractions = json
+KV_MODE = json
 
 [eventgen]
 REPORT-sample-app_for_eventgen = sample-app_for_eventgen
