Syncing up github with git.splunk.com/sa-eventgen repository

--- a/default/props.conf
+++ b/default/props.conf
@@ -10,6 +10,7 @@ sourcetype = eventgen
 [source::...eventgen_metrics.log]
 sourcetype = eventgen_metrics
 KV_MODE = json
+INDEXED_EXTRACTIONS = JSON
 
 [eventgen]
 REPORT-sample-app_for_eventgen = sample-app_for_eventgen
