--- a/default/app.conf
+++ b/default/app.conf
@@ -10,11 +10,11 @@
 [install]
 is_configured = false
 state = enabled
-build = @version.build@
+build = @build.number@
 
 [launcher]
 author = Splunk
-version = @version.major@.@version.minor@.@version.revision@
+version = @build.version@
 
 [ui]
 is_visible = true
