--- a/default/app.conf
+++ b/default/app.conf
@@ -8,7 +8,7 @@
 ## Splunk app configuration file
 
 [install]
-is_configured = false
+is_configured = true
 state = enabled
 build = @build.number@
 
