Explicitly adding port to config, adding wait blocks for rabbitMQ in eventgen services

--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -35,18 +35,15 @@ RUN apk --no-cache upgrade && \
 	ssh-keygen -f /etc/ssh/ssh_host_rsa_key -N '' -t rsa && \
 	mkdir -p /var/run/sshd && \
 	mkdir -p /root/.ssh && \
-	chmod 0700 /root/.ssh
+	chmod 0700 /root/.ssh && \
+	pip install requests_futures nameko pyOpenSSL --upgrade
 
 COPY sshd_config /etc/ssh/sshd_config
 COPY entrypoint.sh /sbin/entrypoint.sh
 COPY splunk_eventgen.tgz /root/splunk_eventgen.tgz
 COPY rabbitmq.config /usr/local/rabbitmq_server-${RABBITMQ_VERSION}/etc/rabbitmq/rabbitmq.config
 
-RUN pip install \
-	/root/splunk_eventgen.tgz \
-	requests_futures \
-	nameko \
-	pyOpenSSL
+RUN pip install /root/splunk_eventgen.tgz
 
 EXPOSE 2222 5672 15672 9501 9500
 WORKDIR /root
