--- a/splunk_eventgen/splunk_app/default/app.conf
+++ b/splunk_eventgen/splunk_app/default/app.conf
@@ -10,11 +10,11 @@
 [install]
 is_configured = true
 state = enabled
-build = @build.number@
+build = 6.0
 
 [launcher]
 author = Splunk
-version = @build.version@
+version = 0.6.0
 
 [ui]
 is_visible = true
