reverting build number and version

--- a/splunk_eventgen/splunk_app/default/app.conf
+++ b/splunk_eventgen/splunk_app/default/app.conf
@@ -10,11 +10,11 @@
 [install]
 is_configured = true
 state = enabled
-build = 6.0
+build = @build.number@
 
 [launcher]
 author = Splunk
-version = 0.6.0
+version = @build.version@
 
 [ui]
 is_visible = true
