adding to app.conf

--- a/splunk_eventgen/splunk_app/default/app.conf
+++ b/splunk_eventgen/splunk_app/default/app.conf
@@ -13,8 +13,13 @@ state = enabled
 build = 1
 
 [launcher]
-author = Splunk
-version = 6.1
+author = Splunk Inc.
+version = 0.6.1
+description = SA-Eventgen app for dynamic data generation
+
+[package]
+id = SA-Eventgen
 
 [ui]
 is_visible = true
+label = SA-Eventgen
