FAST-9640: initial commit

--- a/splunk_eventgen/splunk_app/default/props.conf
+++ b/splunk_eventgen/splunk_app/default/props.conf
@@ -7,7 +7,7 @@ sourcetype = eventgen_rest_handler
 [source::...eventgen.log]
 sourcetype = eventgen
 
-[source::...eventgen_metrics.log]
+[source::...eventgen-metrics.log]
 sourcetype = eventgen_metrics
 KV_MODE = json
 INDEXED_EXTRACTIONS = JSON
