--- a/splunk_eventgen/splunk_app/default/props.conf
+++ b/splunk_eventgen/splunk_app/default/props.conf
@@ -1,13 +1,19 @@
-
-## Eventgen Rest Handler
-[source::...eventgen_rest_handler.log]
-sourcetype = eventgen_rest_handler
-
-## Eventgen
-[source::...eventgen.log]
+[source::...eventgen-*]
 sourcetype = eventgen
 
-[source::...eventgen_metrics.log]
+[source::...eventgen-main.log]
+sourcetype = eventgen_main
+
+[source::...eventgen-listener-process.log]
+sourcetype = eventgen_listener_process
+
+[source::...splunk-hec-handler.log]
+sourcetype = eventgen_hec_handler
+
+[source::...eventgen-errors.log]
+sourcetype = eventgen_errors
+
+[source::...eventgen-metrics.log]
 sourcetype = eventgen_metrics
 KV_MODE = json
 INDEXED_EXTRACTIONS = JSON
