fixing modinput logs

--- a/splunk_eventgen/splunk_app/default/props.conf
+++ b/splunk_eventgen/splunk_app/default/props.conf
@@ -10,6 +10,9 @@ sourcetype = eventgen_hec_handler
 [source::...eventgen-errors.log]
 sourcetype = eventgen_errors
 
+[source::...modinput_eventgen.log]
+sourcetype = eventgen_modinput
+
 [source::...eventgen-metrics.log]
 sourcetype = eventgen_metrics
 KV_MODE = json
