--- a/tests/sample_eventgen_conf/global_regex_stanza/eventgen.conf
+++ b/tests/sample_eventgen_conf/global_regex_stanza/eventgen.conf
@@ -3,6 +3,7 @@ sampleDir = tests/sample_eventgen_conf/global_regex_stanza
 token.0.token = @@integer
 token.0.replacementType = random
 token.0.replacement = integer[0:10]
+interval = 5
 
 [.*_replays]
 sampleDir = tests/sample_eventgen_conf/global_regex_stanza
@@ -23,6 +24,7 @@ sourcetype = windbag
 source = windbag.log
 host = localhost
 end = 1
+interval = 2
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
 token.0.replacementType = timestamp
