--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -47,8 +47,8 @@ COPY dockerfiles/rabbitmq.config /usr/local/rabbitmq_server-${RABBITMQ_VERSION}/
 
 RUN pip install /root/splunk_eventgen.tgz && rm /root/splunk_eventgen.tgz
 
-HEALTHCHECK --interval=1m --timeout=15s --start-period=5m --retries=3 \
-	CMD curl -f http://localhost:9500/status || exit 1
+#HEALTHCHECK --interval=1m --timeout=15s --start-period=5m --retries=3 \
+#	CMD curl -f http://localhost:9500/status || exit 1
 
 EXPOSE 2222 5672 15672 9500
 WORKDIR /opt/splunk/etc/apps
