removed more internal refs, using setup.py for testing

--- a/documentation/eventgendocs.yml
+++ b/documentation/eventgendocs.yml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: eventgendocs
-        image: stg-repo.splunk.com/tonyl/eventgen-docs:latest
+        image: "Insert internal staging artifact url here"
         imagePullPolicy: Always
         ports:
         - containerPort: 4000
