--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -38,7 +38,7 @@ RUN apk --no-cache upgrade && \
 	mkdir -p /var/run/sshd && \
 	mkdir -p /root/.ssh && \
 	chmod 0700 /root/.ssh && \
-	pip install requests_futures nameko pyOpenSSL --upgrade
+	pip install requests_futures nameko pyOpenSSL "urllib3==1.23" --upgrade
 
 COPY dockerfiles/sshd_config /etc/ssh/sshd_config
 COPY dockerfiles/entrypoint.sh /sbin/entrypoint.sh
