new healthcheck and fix FAST-11311

--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:3.6
+    FROM alpine:3.6
 
 ENV RABBITMQ_VERSION=3.6.13
 ENV EVENTGEN_PATH=/usr/lib/python2.7/site-packages/splunk_eventgen
@@ -47,8 +47,8 @@ COPY dockerfiles/rabbitmq.config /usr/local/rabbitmq_server-${RABBITMQ_VERSION}/
 
 RUN pip install /root/splunk_eventgen.tgz && rm /root/splunk_eventgen.tgz
 
-#HEALTHCHECK --interval=1m --timeout=15s --start-period=5m --retries=3 \
-#	CMD curl -f http://localhost:9500/status || exit 1
+HEALTHCHECK --interval=1m --timeout=15s --start-period=5m --retries=3 \
+	CMD ps -ef | grep splunk_eventgen | grep -v grep || exit 1
 
 EXPOSE 2222 5672 15672 9500
 WORKDIR /opt/splunk/etc/apps
