removed more comments, not done fixing sample confs

--- a/tests/sample_eventgen_conf/global_regex_stanza/eventgen.conf
+++ b/tests/sample_eventgen_conf/global_regex_stanza/eventgen.conf
@@ -52,6 +52,10 @@ token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
 token.0.replacementType = timestamp
 token.0.replacement = %Y-%m-%d %H:%M:%S
 
+token.1.token = @@something
+token.1.replacementType = random
+token.1.replacement = integer[0:50]
+
 [test3_replay]
 sampleDir = tests/sample_eventgen_conf/global_regex_stanza
 mode = replay
@@ -69,6 +73,7 @@ end = 1
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
 token.0.replacementType = timestamp
 token.0.replacement = %Y-%m-%d %H:%M:%S
-disabled = 1
 
-
+token.1.token = @@something
+token.1.replacementType = random
+token.1.replacement = integer[0:50]
