add python code style lint and format

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,12 @@
 [flake8]
-exclude = .git,.tox,__pycache__,env,venv
+exclude = .git,.tox,__pycache__,env,venv,build,dist,docs
 max-line-length = 120
 
 [metadata]
 description-file = README.md
 version-from-file: __init__.py
+
+[yapf]
+based_on_style = pep8
+spaces_before_comment = 4
+split_before_logical_operator = true
