Formatting code to standards, fixing linting errors

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,9 @@ max-line-length = 120
 [metadata]
 description-file = README.md
 version-from-file: __init__.py
+
+[pep8]
+column_limit = 120
+
+[isort]
+ignore = E121,E123,E126,E226,E24,E704,W503,W504,E722
