Almost done with linting, finishing plugins/tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,8 @@
 [flake8]
 exclude = .git,.tox,__pycache__,env,venv
 max-line-length = 120
+ignore = E121,E123,E126,E226,E24,E704,W503,W504,E722,E731
 
 [metadata]
 description-file = README.md
 version-from-file: __init__.py
-
-[pep8]
-column_limit = 120
-
-[isort]
-ignore = E121,E123,E126,E226,E24,E704,W503,W504,E722
