--- a/tests/sample_eventgen_conf/unit/eventgen.conf.config
+++ b/tests/sample_eventgen_conf/unit/eventgen.conf.config
@@ -1,6 +1,9 @@
 [sample]
 sampleDir = tests/sample_eventgen_conf/sample
-outputMode = stdout
+outputMode = splunkstream
+splunkMethod = https
+splunkHost = localhost
+splunkPort = 8088
 earliest = -3s
 latest = now
 
@@ -12,7 +15,7 @@ perDayVolume = 1
 randomizeCount = 0.2
 timeMultiple = 2
 
-disabled = true
+disabled = false
 profiler = false
 useOutputQueue = false
 bundlelines = false
