Linting complete, add note to config

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [flake8]
 exclude = .git,.tox,__pycache__,env,venv
 max-line-length = 120
-ignore = E121,E123,E126,E226,E24,E704,W503,W504,E722,E731
+# Linting complete with additional ignores E722 (bare excepts), E731 (lambda usage), and W605 (escape sequences)
 
 [metadata]
 description-file = README.md
