--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ stage/
 local/
 eventgen_wsgi.conf
 *.log
-dist
 *.egg-info
 **/*.tgz
 .cache
@@ -27,3 +26,4 @@ _book
 *.result
 venv/*
 *.log.*
+splunk_eventgen-*/
