--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
           name: Run Tests
           command: |
             make test
+          no_output_timeout: 30m
       - store_test_results:
           path: /home/circleci/project/tests/test-reports
       - store_artifacts:
