clean up the logic about sampleDir and jinja_template_dir setting Add functional test for jinja template generator Fixes #174 Fixes #167

--- a/tests/large/conf/eventgen_replay.conf
+++ b/tests/large/conf/eventgen_replay.conf
@@ -1,6 +1,7 @@
 [replay]
-sampleDir = tests/large/sample
+sampleDir = ../sample
 mode = replay
+earliest = -5s
 sampletype = raw
 outputMode = stdout
 end = 1
