--- a/tests/large/conf/eventgen_sample_breaker.conf
+++ b/tests/large/conf/eventgen_sample_breaker.conf
@@ -1,5 +1,5 @@
 [breakersample]
-sampleDir = tests/large/sample
+sampleDir = ../sample
 outputMode = file
 fileName = tests/large/results/eventgen_sample_breaker.result
 count = 3
