--- a/tests/large/conf/eventgen_token_replacement.conf
+++ b/tests/large/conf/eventgen_token_replacement.conf
@@ -1,5 +1,5 @@
 [tokenreplacement.sample]
-sampleDir = tests/large/sample
+sampleDir = ../sample
 mode = sample
 sampletype = raw
 outputMode = stdout
