--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -25,6 +25,7 @@ RUN apk --no-cache upgrade && \
 	erlang-xmerl \ 
 	erlang-eldap \
 	erlang-syntax-tools \
+	pwgen \
 	xz \
 	curl \
 	bash && \ 
@@ -40,6 +41,7 @@ RUN apk --no-cache upgrade && \
 	chmod 0700 /root/.ssh && \
 	pip install requests_futures nameko pyOpenSSL --upgrade
 
+RUN echo "root:`pwgen 15 1`" | chpasswd
 COPY dockerfiles/sshd_config /etc/ssh/sshd_config
 COPY dockerfiles/entrypoint.sh /sbin/entrypoint.sh
 COPY dist/* /root/splunk_eventgen.tgz
