--- a/tests/sample_eventgen_conf/unit/eventgen.conf.config
+++ b/tests/sample_eventgen_conf/unit/eventgen.conf.config
@@ -1,5 +1,5 @@
 [sample]
-sampleDir = tests/sample_eventgen_conf/sample
+sampleDir = ../sample
 outputMode = splunkstream
 splunkMethod = https
 splunkHost = localhost
