enable test coverage in circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,12 +22,12 @@ jobs:
           path: /home/circleci/project/tests/test-reports
       - store_artifacts:
           path: /home/circleci/project/tests/test-reports
-        
-      
+      - store_artifacts:
+          path: /home/circleci/project/htmlcov
+
 workflows:
   version: 2
   run_tests:
     jobs: 
       - test_eventgen
       
-          
