--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,8 @@ jobs:
           path: /home/circleci/project/tests/test-reports
       - store_artifacts:
           path: /home/circleci/project/tests/test-reports
+      - store_test_results:
+          path: /home/circleci/project/htmlcov
       - store_artifacts:
           path: /home/circleci/project/htmlcov
 
