--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
+            sudo apt-get install -y libxml
             pip install -r tests/requirements.txt
       - run:
           name: Run Tests
@@ -28,6 +29,6 @@ jobs:
 workflows:
   version: 2
   run_tests:
-    jobs: 
+    jobs:
       - test_eventgen
-      
+
