Add test for negative floats

--- a/tests/large/conf/eventgen_token_replacement.conf
+++ b/tests/large/conf/eventgen_token_replacement.conf
@@ -60,3 +60,7 @@ token.12.replacement = ipv6
 token.13.token = "end-user-ip":"(\d+.\d+.\d+.\d+)
 token.13.replacementType = random
 token.13.replacement = mac
+
+token.14.token = "lastMileRTT":"(\d+)
+token.14.replacementType = random
+token.14.replacement = float[-3.0:3.0]
