--- a/tests/large/conf/eventgen_plugin_httpevent.conf
+++ b/tests/large/conf/eventgen_plugin_httpevent.conf
@@ -6,6 +6,7 @@ sampletype = raw
 outputMode = httpevent
 httpeventServers = {"servers": [{"protocol": "https", "port": "8088", "key": "00000000-0000-0000-0000-000000000000", "address": "localhost"}]}
 end = 1
+sourcetype = httpevent
 
 token.0.token = \d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}
 token.0.replacementType = timestamp
