--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - run:
           name: Install Dependencies
           command: |
-            pip install -r tests/requirements.txt
+            pip install -r requirements.txt
       - run:
           name: Run Tests
           command: |
