--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
-include README.md setup.py setup.cfg 
+include README.md setup.py setup.cfg requirements.txt
 
 recursive-include splunk_eventgen *
 
